--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pandas~=1.1.1
 requests~=2.22.0
 bs4~=0.0.1
 threaded
-pyodbc~=4.0.30
+psycopg2~=2.8.6
 fuzzywuzzy~=0.18.0
 python-Levenshtein
 sklearn~=0.0
