--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-streamlit~=0.65.2
-pandas~=1.1.1
-requests~=2.22.0
-bs4~=0.0.1
+streamlit==0.49.0
+pandas==1.1.1
+requests==2.22.0
+bs4==0.0.1
 threaded
-psycopg2~=2.8.6
-fuzzywuzzy~=0.18.0
+psycopg2==2.8.6
+fuzzywuzzy==0.18.0
 python-Levenshtein
-sklearn~=0.0
-numpy~=1.19.1
-scikit-learn~=0.23.2
-beautifulsoup4~=4.8.0
-imblearn~=0.0
-matplotlib~=3.3.2
+sklearn==0.0
+numpy==1.19.1
+scikit-learn==0.23.2
+beautifulsoup4==4.8.0
+imblearn==0.0
+matplotlib==3.3.2
