--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==0.49.0
+streamlit==0.79.0
 pandas==1.1.1
 requests==2.22.0
-bs4
-lxml
+bs4~=0.0.1
+lxml~=4.4.0
 threaded
 psycopg2==2.8.6
 fuzzywuzzy==0.18.0
